...
        <TextView
            android:id="@+id/internetPairingRequestLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:accessibilityHeading="true"
            android:labelFor="@id/internetPairingRequestText"
            android:text="@string/internet_pairing_request_label"
            android:textColor="?attr/colorOnSurface"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
...
            android:saveEnabled="false"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/internetPairingAcceptanceErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:accessibilityLiveRegion="polite"
            android:breakStrategy="balanced"
            android:textColor="?attr/colorError"
...
