...
            android:saveEnabled="false"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/internetProfileImportErrorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:accessibilityLiveRegion="polite"
            android:breakStrategy="balanced"
            android:textColor="?attr/colorError"
...
